--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,11 @@ header button:hover {
 }
 
 main {
-	text-align: center;
+	display: flex;
+	justify-content: space-between;
+	gap: 1rem;
+	flex-wrap: wrap;
+	padding: 0 2rem;
 }
 
 img {
